# legacy-guard-charms

./: COMPLETION_SUMMARY.md  DEPLOYMENT_COMPLETION_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  ENV_VARIABLES_INTEGRATION.sh  FRONTEND_CONTRACT_INTEGRATION.md  HOW_TO_GET_PUBKEYS_AND_AMOUNTS.md  INTEGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md
contract/legacy-guard/: .env  .gitignore  Cargo.toml  README.md  claim.yaml  pulse.yaml
contract/legacy-guard/spells/: initialize.yaml  mint-nft.yaml  mint-token.yaml
contract/legacy-guard/src/: contract.rs  lib.rs  main.rs
frontend/: Dockerfile  compose.yaml  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/derive-pubkey/: route.ts
frontend/app/api/vault/create/: route.ts
frontend/app/api/vaults/: route.ts
frontend/app/api/vaults/[id]/: route.ts
frontend/app/api/vaults/[id]/claim/: route.ts
frontend/app/vaults/: page.tsx
frontend/app/vaults/[id]/claim/: page.tsx
frontend/components/: ConnectWallet.tsx  active-vault-dashboard.tsx  create-vault-form.tsx  footer.tsx  header.tsx
frontend/hooks/: useUnisat.ts
frontend/lib/: config.ts  contract-integration.ts  deployment.ts  prisma.ts
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20260102153440_init_vault_model/: migration.sql
frontend/prisma/migrations/20260103001613_add_vault_status_enum/: migration.sql
frontend/public/: legacy-guard.wasm
frontend/types/: window.d.ts
